--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -3,7 +3,7 @@ section {
 }
 
 section .description h1 {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     font-size: 3rem;
     font-weight: 600;
     font-family: 'Lato', sans-serif;
@@ -14,12 +14,13 @@ section .description h1 span {
 
 }
 
-section .description p {
+section.About .description p {
     font-family: 'Lato', sans-serif;
-    color: var(--secondary);
+    color: var(--bgDark);
     line-height: 1.9rem;
-    margin-bottom: 8rem;
+    margin-bottom: 5rem;
     font-size: 1.25rem;
+    text-align: justify;
     
 }
 
