--- a/src/styles/Foot.css
+++ b/src/styles/Foot.css
@@ -11,7 +11,8 @@
 .Pages a {
     color: var(--white);
     padding: 1.5rem;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
+    font-family: 'Lato', sans-serif;
 
 }
 .Pages a:hover {
